[gd_scene load_steps=4 format=2]

[ext_resource path="res://course/lesson-11-time-delta/visuals/DemoRotatingTime.gd" type="Script" id=1]
[ext_resource path="res://course/lesson-1-what-code-is-like/first_practice/godot_bottom.png" type="Texture" id=2]
[ext_resource path="res://course/lesson-1-what-code-is-like/first_practice/hand_ice.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="DemoRotateSprite" type="Node2D" parent="."]

[node name="GodotBottom" type="Sprite" parent="DemoRotateSprite"]
position = Vector2( 0, -17 )
texture = ExtResource( 2 )

[node name="HandIce" type="Sprite" parent="DemoRotateSprite"]
position = Vector2( 66, 14 )
rotation = 0.36894
texture = ExtResource( 3 )

[node name="HandIce2" type="Sprite" parent="DemoRotateSprite"]
position = Vector2( -65, 19 )
rotation = -0.483649
texture = ExtResource( 3 )
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
